Don't specialize binary ops as int32 if lhs/rhs is |undefined| (bug 724530, r=dvander)